# blupig-gomoku

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-nginx.conf  docker-start.sh  start.sh
gui/client/: index.html  renju.html
gui/client/assets/: proxima_nova.css  yl-v4-main.css
gui/client/challenge/: index.html
gui/server/: index.js  package-lock.json  package.json  renju.php
include/ai/: ai.h  ai_controller.h  eval.h  negamax.h  renju_ai.h  utils.h
include/api/: renju_api.h  renjuapi.h
include/parallel/: controller.h
include/protocols/: cli.h  gomocup.h
include/utils/: base64.h  globals.h
profiling/archived_data/: p_160919_1024.txt  p_160920_1637.txt  p_160921_0032.txt
src/ai/: ai.cc  ai.cpp  ai_controller.cc  eval.cc  eval.cpp  negamax.cc  negamax.cpp  utils.cc  utils.cpp
src/api/: renju_api.cc  renju_api.cpp  renjuapi.cpp
src/main/: main.cc  main.cpp
src/parallel/: controller.cc
src/protocols/: cli.cc  gomocup.cc
src/utils/: base64.cpp  globals.cc  globals.cpp
tests/: gtest_ai_eval.cc  gtest_ai_negamax.cc  gtest_main.cc
tests/gtest/: gtest.h
